it should be about done

--- a/aboutme.html
+++ b/aboutme.html
@@ -89,33 +89,34 @@
         </p>
       </article>
       <article id="abouttriangledown" class="triangle_down middle"></article>
-      <article id="tema_2_8" class="no_triangle">
-        <h2>PORTFOLIO AGTIG OM MIG</h2>
+      <h2>PORTFOLIO AGTIG OM MIG</h2>
+      <article id="om_mig_agtig" class="no_triangle">
         <p class="odd">
-          Emma Pasquer is a 23 yo geek aspiring designer and web dev based in
+          <em class="emma">Emma Pasquer</em> is a 23 yo
+          <strike>geek</strike> aspiring designer and web dev based in
           Copenhagen.
         </p>
         <p class="to_right even">
-          Emma is currently studying Multimedia Design @ KEA.
+          <em class="emma">Emma </em> is currently studying Multimedia Design @
+          KEA.
         </p>
         <p class="odd">
           She enjoys the bad weather there and drinking coffee while wanting to
-          strangle perfect the projects she works on.
+          <strike>strangle</strike> perfect the projects she works on.
         </p>
         <p class="to_right even">
-          She is most often seen @ her fav coffee shop sipping beer coffee.
+          She is most often seen @ her fav coffee shop sipping
+          <strike>beer</strike> coffee.
         </p>
         <p class="odd">
-          You can contact her here and here and maybe there (but not over
-          there).
+          You can contact her here and here and maybe there
+          <strike>(but not over there)</strike> .
         </p>
         <p class="to_right even">
-          If you have a cool project (then good for you) and you can notify me
-          here.
+          If you have a cool project <strike> (then good for you)</strike> and
+          you can notify me here.
         </p>
-        <a class="linkmobile" href="content/om_mig/cv.pdf"
-          >download MIT CV.
-        </a>
+        <a id="cv" class="linkmobile" href="content/om_mig/cv.pdf">download MIT CV. </a>
       </article>
     </main>
     <footer>
