donedy dine skal valiedres

--- a/aboutme.html
+++ b/aboutme.html
@@ -64,10 +64,11 @@
       </article>
       <article class="triangle_down"></article>
       <article id="tema_2_6" class="no_triangle">
-        <img src="content/om_mig/" alt="me" />
+        <!-- <img id="om_mig_img" src="content/om_mig/om_mig.png" alt="me" /> -->
+        <div id="om_mig_img"></div>
       </article>
       <article class="arrow_galleri">
-        <a id="arrow9" class="arrow_down_link" href="#"></a>
+        <a id="arrow9" class="arrow_down_link" href="#tema_2_7"></a>
       </article>
       <article class="triangle_up middle"></article>
       <article id="tema_2_7" class="triangle_middle middle">
@@ -116,7 +117,9 @@
           If you have a cool project <strike> (then good for you)</strike> and
           you can notify me here.
         </p>
-        <a id="cv" class="linkmobile" href="content/om_mig/cv.pdf">download MIT CV. </a>
+        <a id="cv" class="linkmobile" href="content/om_mig/cv.pdf"
+          >download MIT CV.
+        </a>
       </article>
     </main>
     <footer>
