--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <header>
       <div id="headerid">
         <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -48,8 +49,8 @@
           </ul>
 
           <button id="hamburger">
-            <div id="burger_closed"></div>
-            <div id="burger_opened"></div>
+            <span id="burger_closed"></span>
+            <span id="burger_opened"></span>
           </button>
         </nav>
       </div>
