--- a/tema1.html
+++ b/tema1.html
@@ -50,8 +50,8 @@
           </ul>
 
           <button id="hamburger">
-            <div id="burger_closed"></div>
-            <div id="burger_opened"></div>
+            <span id="burger_closed"></span>
+            <span id="burger_opened"></span>
           </button>
         </nav>
       </div>
@@ -89,7 +89,6 @@
           height="315"
           src="https://www.youtube.com/embed/xOxvL2CbPio"
           title="YouTube video player"
-          frameborder="20"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
