--- a/tema2.html
+++ b/tema2.html
@@ -50,8 +50,8 @@
           </ul>
 
           <button id="hamburger">
-            <div id="burger_closed"></div>
-            <div id="burger_opened"></div>
+            <span id="burger_closed"></span>
+            <span id="burger_opened"></span>
           </button>
         </nav>
       </div>
