--- a/tema5.html
+++ b/tema5.html
@@ -50,8 +50,8 @@
           </ul>
 
           <button id="hamburger">
-            <div id="burger_closed"></div>
-            <div id="burger_opened"></div>
+            <span id="burger_closed"></span>
+            <span id="burger_opened"></span>
           </button>
         </nav>
       </div>
@@ -63,7 +63,7 @@
         <a id="two" class="index_link" href="tema5.html">Tema</a>
       </article>
       <article class="triangle_down"></article>
-      <article id="tema_2_4" class="no_triangle">
+      <article id="tema_2_5" class="no_triangle">
         <h2>1.Pilot projekt</h2>
         <p class="to_right even">
           Tema 5: Indhold har været det mest udfordrende for mig fordi vi har
@@ -100,7 +100,6 @@
           height="315"
           src="https://www.youtube.com/embed/d36tHM1wtRA"
           title="YouTube video player"
-          frameborder="20"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
@@ -113,7 +112,7 @@
         <img class="border8" src="assets/border3.svg" alt="border3" />
       </article>
       <article class="triangle_down middle"></article>
-      <article id="tema_2_5" class="no_triangle">
+      <article id="tema_2_3" class="no_triangle">
         <h3 class="desktop_h3">2.Redesign opgave</h3>
         <p class="to_right even">
           Redesign projekt var gruppearbejde som krævede at vi sammen lavet
