--- a/aboutme.html
+++ b/aboutme.html
@@ -50,8 +50,8 @@
           </ul>
 
           <button id="hamburger">
-            <div id="burger_closed"></div>
-            <div id="burger_opened"></div>
+            <span id="burger_closed"></span>
+            <span id="burger_opened"></span>
           </button>
         </nav>
       </div>
@@ -94,7 +94,7 @@
       <article id="om_mig_agtig" class="no_triangle">
         <p class="odd">
           <em class="emma">Emma Pasquer</em> is a 23 yo
-          <strike>geek</strike> aspiring designer and web dev based in
+          <span class="strike">geek</span> aspiring designer and web dev based in
           Copenhagen.
         </p>
         <p class="to_right even">
@@ -103,18 +103,18 @@
         </p>
         <p class="odd">
           She enjoys the bad weather there and drinking coffee while wanting to
-          <strike>strangle</strike> perfect the projects she works on.
+          <span class="span">strangle</span> perfect the projects she works on.
         </p>
         <p class="to_right even">
           She is most often seen @ her fav coffee shop sipping
-          <strike>beer</strike> coffee.
+          <span class="strike">beer</span> coffee.
         </p>
         <p class="odd">
           You can contact her here and here and maybe there
-          <strike>(but not over there)</strike> .
+          <span class="strike">(but not over there)</span> .
         </p>
         <p class="to_right even">
-          If you have a cool project <strike> (then good for you)</strike> and
+          If you have a cool project <span class="strike"> (then good for you)</span> and
           you can notify me here.
         </p>
         <a id="cv" class="linkmobile" href="content/om_mig/cv.pdf"
