--- a/dokumentation.html
+++ b/dokumentation.html
@@ -52,8 +52,8 @@
           </ul>
 
           <button id="hamburger">
-            <div id="burger_closed"></div>
-            <div id="burger_opened"></div>
+            <span id="burger_closed"></span>
+            <span id="burger_opened"></span>
           </button>
         </nav>
       </div>
@@ -69,7 +69,7 @@
       </article>
       <h2>Portfolio</h2>
       <article id="dokcenter" class="no_triangle">
-        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_right even">
           For Tema 6: Portfolio opgave har jeg valgt at bruge lidt af alle de
           teknikker vi har lært i semestret. Jeg har siddet ned og lavet et
@@ -77,20 +77,20 @@
           med de samme opgaver som var klistret op på mit vindue så jeg kunne se
           hver dag.
         </p>
-        <img class="to_right grafic3" src="assets/grafic3.svg" />
+        <img class="to_right grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_left even">
           Jeg har valgt at fokusere først og fremmest på alt det forarbejde og
           opsamling. Jeg har samlet alle de dokumenter jeg skulle bruge i
           portfolio’en og har sat dem op i forskellige mapper. Jeg har derefter
           skrevet udkast af alt det jeg skulle skrive om på sitet.
         </p>
-        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_right even">
           Så har jeg også sorteret alle de inspirationsmapper jeg har lavet i
           løbet af semestret (både ressources og flotte sider) for at samle alle
           de ideer jeg kunne tænke mig at bruge eller blive inspireret af.
         </p>
-        <img class="to_right grafic3" src="assets/grafic3.svg" />
+        <img class="to_right grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_left even">
           Jeg har lavet forskellige farvepaletter og forskellige font pairings
           og så valgte dem jeg skulle bruge. Jeg har downloadet fontene og
@@ -98,61 +98,61 @@
           skitse af hvordan det skulle hænge sammen, en slags mix mellem
           moodboard og styletile.
         </p>
-        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_right even">
           Jeg har så lavet et slags sitemap og tænkt på hvad for nogle sider jeg
           skulle have og hvad de skulle hedde. Derefter tog jeg udgangspunkt i
           det for at lave wireframes/layouts til alle de siderne. Både mobil og
           desktop version.
         </p>
-        <img class="to_right grafic3" src="assets/grafic3.svg" />
+        <img class="to_right grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_left even">
           Skelettet til min portfolio vscode mappe skulle så laves. Og med alle
           de ting jeg har samlet i mapper er det nemt at bare sætte dem ind i
           både html og css.
         </p>
-        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_right even">
           Parallelt har jeg eksperimenteret med noget css html og java i andre
           mapper for at have koden til de funktioner jeg vil have i min side og
           bare kunne copy/paste dem.
         </p>
-        <img class="to_right grafic3" src="assets/grafic3.svg" />
+        <img class="to_right grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_left even">
           Jeg har prøvet så vidt som muligt at undgå rod og har prøvet at bruge
           alt det vi har lært på det semester.
         </p>
-        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_right even">
           Temaet for mit website er art nouveau selvom paletten jeg valgte var
           ikke en af de art nouveau nogle jeg lavede og var så en af dem jeg har
           lavet for at afspejle migselv. Jeg har så tegnet mine grafik elementer
           og nogle knapper og ikoner.
         </p>
-        <img class="to_right grafic3" src="assets/grafic3.svg" />
+        <img class="to_right grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_left even">
           Jeg har så også lavet ”logo” samt favicon til siden.
         </p>
-        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_right even">
           Med alle mine ideer og inspirationer har jeg valgt at vente til enden
           for at tegne mit portræt for ”om mig” siden, det er en slags poetisk
           måde for mig at afslutte projektet ved at tegne migselv i det nyeste
           version af mig.
         </p>
-        <img class="to_right grafic3" src="assets/grafic3.svg" />
+        <img class="to_right grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_left even">
           Al valg har taget meget tid og omsorg, jeg har brug ca. 80 af tiden på
           ”forabejdet” og gennemtænke tingene.
         </p>
-        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" alt="grafic3"/>
         <p class="to_right even">
           Jeg har så også prøvet at dokumentere så meget som jeg kunne, for det
           er en af de ting jeg har haft det sværeste med på studiet.
         </p>
-        <img class="to_right grafic3" src="assets/grafic3.svg" />
+        <img class="to_right grafic3" src="assets/grafic3.svg" alt="grafic3"/>
 
-        <img id="grafic3" src="assets/grafic3.svg" />
+        <img id="grafic3" src="assets/grafic3.svg" alt="grafic3"/>
       </article>
 
       <article id="dokcenter2" class="triangle_middle index_article">
@@ -201,7 +201,7 @@
         </div>
       </article>
       <article id="doksisdt" class="triangle_middle">
-        <img id="grafic2" src="assets/grafic2.svg" />
+        <img id="grafic2" src="assets/grafic2.svg" alt="grafic2"/>
       </article>
     </main>
     <footer>
