--- a/tema4.html
+++ b/tema4.html
@@ -51,8 +51,8 @@
           </ul>
 
           <button id="hamburger">
-            <div id="burger_closed"></div>
-            <div id="burger_opened"></div>
+            <span id="burger_closed"></span>
+            <span id="burger_opened"></span>
           </button>
         </nav>
       </div>
@@ -85,7 +85,7 @@
           height="315"
           src="https://www.youtube.com/embed/yjfvt-5zy64"
           title="YouTube video player"
-          frameborder="20"
+          
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
