--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me</title>
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="icon" type="image/png" href="favicon/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="tema.css" />
   </head>
@@ -94,8 +96,8 @@
       <article id="om_mig_agtig" class="no_triangle">
         <p class="odd">
           <em class="emma">Emma Pasquer</em> is a 23 yo
-          <span class="strike">geek</span> aspiring designer and web dev based in
-          Copenhagen.
+          <span class="strike">geek</span> aspiring designer and web dev based
+          in Copenhagen.
         </p>
         <p class="to_right even">
           <em class="emma">Emma </em> is currently studying Multimedia Design @
@@ -114,8 +116,9 @@
           <span class="strike">(but not over there)</span> .
         </p>
         <p class="to_right even">
-          If you have a cool project <span class="strike"> (then good for you)</span> and
-          you can notify me here.
+          If you have a cool project
+          <span class="strike"> (then good for you)</span> and you can notify me
+          here.
         </p>
         <a id="cv" class="linkmobile" href="content/om_mig/cv.pdf"
           >download MIT CV.
