--- a/dokumentation.html
+++ b/dokumentation.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dokumentation</title>
+      <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="icon" type="image/png" href="favicon/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="tema.css" />
     <link rel="stylesheet" href="dokumentation.css" />
