--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-      <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
     <link rel="icon" type="image/png" href="favicon/favicon.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -60,37 +60,41 @@
     </header>
     <main>
       <div class="grafic_1"><img src="assets/grafic1.svg" alt="grafic" /></div>
-      <article class="triangle_down index_article gauche">
+      <article class="triangle_middle index_article gauche">
         <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
       </article>
+      <article class="triangle_down index_article"></article>
       <article class="index_article droite">
         <h1 class="number">2</h1>
         <a class="index_link" href="tema2.html">Tema</a>
       </article>
       <article class="triangle_up"></article>
-      <article class="triangle_down index_article gauche">
+      <article class="triangle_middle index_article gauche">
         <h1 class="number">3</h1>
         <a class="index_link" href="tema3.html">Tema</a>
       </article>
+      <article class="triangle_down index_article gauche"></article>
       <article class="index_article droite">
         <h1 class="number">4</h1>
         <a class="index_link" href="tema4.html">Tema</a>
       </article>
       <article class="triangle_up"></article>
-      <article class="triangle_down index_article gauche">
+      <article class="triangle_middle index_article gauche">
         <h1 class="number">5</h1>
         <a class="index_link" href="tema5.html">Tema</a>
       </article>
+      <article class="triangle_down index_article gauche"></article>
       <article class="index_article droite">
         <h1 class="number">0</h1>
         <a class="index_link" href="dokumentation.html">Doku-<br />mentation</a>
       </article>
       <article class="triangle_up"></article>
-      <article class="triangle_down index_article gauche">
+      <article class="triangle_middle index_article gauche">
         <h1 class="number me">me</h1>
         <a class="index_link about" href="aboutme.html">About</a>
       </article>
+      <article class="triangle_down index_article gauche"></article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
