figure i header why tf kom dte ikke med traet nu

--- a/dokumentation.html
+++ b/dokumentation.html
@@ -54,8 +54,8 @@
           </ul>
 
           <button id="hamburger">
-            <span id="burger_closed"></span>
-            <span id="burger_opened"></span>
+            <figure id="burger_closed"></figure>
+            <figure id="burger_opened"></figure>
           </button>
         </nav>
       </div>
