burger button gone and is now a span should valida

--- a/tema3.html
+++ b/tema3.html
@@ -52,10 +52,10 @@
             <li><a href="aboutme.html">About me</a></li>
           </ul>
 
-          <button id="hamburger">
+          <span id="hamburger">
             <figure id="burger_closed"></figure>
             <figure id="burger_opened"></figure>
-          </button>
+          </span>
         </nav>
       </div>
       <div class="top_separator"></div>
