--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+     <header>
       <div id="headerid">
         <div>
           <a href="index.html"
@@ -50,10 +50,10 @@
             <li><a href="aboutme.html">About me</a></li>
           </ul>
 
-          <button id="hamburger">
+          <span id="hamburger">
             <figure id="burger_closed"></figure>
             <figure id="burger_opened"></figure>
-          </button>
+          </span>
         </nav>
       </div>
       <div class="top_separator"></div>
