--- a/tema5.html
+++ b/tema5.html
@@ -51,10 +51,10 @@
             <li><a href="aboutme.html">About me</a></li>
           </ul>
 
-          <span id="hamburger">
-            <figure id="burger_closed"></figure>
-            <figure id="burger_opened"></figure>
-          </span>
+          <div id="hamburger">
+            <div id="burger_closed"></div>
+            <div id="burger_opened"></div>
+          </div>
         </nav>
       </div>
       <div class="top_separator"></div>
